[gd_scene load_steps=14 format=3 uid="uid://dmdowvbhqs2m6"]

[ext_resource type="Script" path="res://[painting] Painting Room/finish_button.gd" id="1_qptvx"]

[sub_resource type="BoxMesh" id="BoxMesh_n4br4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qjkfi"]
albedo_color = Color(0.631373, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_quy50"]
material = SubResource("StandardMaterial3D_qjkfi")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pu4yo"]

[sub_resource type="Animation" id="Animation_mg3lr"]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mesh:material:emission_energy_multiplier")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 2.0, 0.0]
}

[sub_resource type="Animation" id="Animation_kmbtk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mesh:material:emission_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mce0"]
_data = {
"RESET": SubResource("Animation_kmbtk"),
"blink": SubResource("Animation_mg3lr")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ymww0"]

[sub_resource type="Animation" id="Animation_rhs2p"]
resource_name = "press_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.0972899, 0), Vector3(0, 0.0337054, 0)]
}

[sub_resource type="Animation" id="Animation_3eg1x"]
resource_name = "release"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.0337054, 0), Vector3(0, 0.0972899, 0)]
}

[sub_resource type="Animation" id="Animation_qq2h6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:mesh:material:emission_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ukake"]
_data = {
"RESET": SubResource("Animation_qq2h6"),
"press_down": SubResource("Animation_rhs2p"),
"release": SubResource("Animation_3eg1x")
}

[node name="FinishButton" type="StaticBody3D"]
script = ExtResource("1_qptvx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.138487, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_n4br4")
skeleton = NodePath("../..")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.95, 0, 8.30516e-08, 0, -0.059, 0, -8.30516e-08, 0, -0.95, 0, 0.0972899, 0)
mesh = SubResource("CylinderMesh_quy50")
skeleton = NodePath("../..")

[node name="ButtonCol" type="StaticBody3D" parent="Button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/ButtonCol"]
shape = SubResource("CylinderShape3D_pu4yo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
libraries = {
"": SubResource("AnimationLibrary_1mce0")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0254542, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.138487, 0, 0, 0, 1, 0, 0.0879284, 0)
shape = SubResource("BoxShape3D_ymww0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ukake")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
